[package]
name = "bgfx-rs-bindgen"
authors = ["Daniel Collin <daniel@collin.com>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bgfx-idl = { path = "../bgfx-idl" }
convert_case = "0.4.0"

[[bin]]
name = "gen"
path = "src/main.rs"
